# PAA

./: README.md
Trabalho NP-Completo/: Makefile  README.md  Untitled.ipynb  main.py
Trabalho NP-Completo/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Trabalho NP-Completo/C/: 3CNFSAT  3CNFSAT.c  A_to_B  A_to_B.c  B_to_A  B_to_A.c  Makefile  a_b  draw_graph.py  draw_graph2.py  grafo.txt  graph.txt  indep_a  main  main.c  sat
Trabalho NP-Completo/C/grafo/: pyproject.toml
Trabalho NP-Completo/Python/: main.py
Trabalho NP-Completo/Python/src/: desenha_grafo.py  trata_A_para_B.py  valida_grafo.py
Trabalho NP-Completo/nome_do_projeto/: pyproject.toml
Trabalho NP-Completo/src/: busca_exaustiva_Otima_B.py  trata_A_para_B.py  trata_B_para_A.py  trata_clausulas_A.py  valida_instancia.py
