[tool.poetry]
name = "grafo"
version = "0.1.0"
description = ""
authors = ["Anthony Muniz <aoliveira@computacao.cua.ufmt.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6"
matplotlib = "^3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
